--- a/001_Start.ipynb
+++ b/001_Start.ipynb
@@ -187,6 +187,689 @@
     "else:\n",
     "    print(\"num is zero\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab1d76f7",
+   "metadata": {},
+   "source": [
+    "### Scalar Types & Values\n",
+    "* Bool\n",
+    "* None\n",
+    "* int\n",
+    "* float\n",
+    "    * Decimal\n",
+    "    * Fraction\n",
+    "* Complex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "87f8d900",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class bool in module builtins:\n",
+      "\n",
+      "class bool(int)\n",
+      " |  bool(x) -> bool\n",
+      " |  \n",
+      " |  Returns True when the argument x is true, False otherwise.\n",
+      " |  The builtins True and False are the only two instances of the class bool.\n",
+      " |  The class bool is a subclass of the class int, and cannot be subclassed.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      bool\n",
+      " |      int\n",
+      " |      object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __and__(self, value, /)\n",
+      " |      Return self&value.\n",
+      " |  \n",
+      " |  __or__(self, value, /)\n",
+      " |      Return self|value.\n",
+      " |  \n",
+      " |  __rand__(self, value, /)\n",
+      " |      Return value&self.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __ror__(self, value, /)\n",
+      " |      Return value|self.\n",
+      " |  \n",
+      " |  __rxor__(self, value, /)\n",
+      " |      Return value^self.\n",
+      " |  \n",
+      " |  __xor__(self, value, /)\n",
+      " |      Return self^value.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from int:\n",
+      " |  \n",
+      " |  __abs__(self, /)\n",
+      " |      abs(self)\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      True if self else False\n",
+      " |  \n",
+      " |  __ceil__(...)\n",
+      " |      Ceiling of an Integral returns itself.\n",
+      " |  \n",
+      " |  __divmod__(self, value, /)\n",
+      " |      Return divmod(self, value).\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __float__(self, /)\n",
+      " |      float(self)\n",
+      " |  \n",
+      " |  __floor__(...)\n",
+      " |      Flooring an Integral returns itself.\n",
+      " |  \n",
+      " |  __floordiv__(self, value, /)\n",
+      " |      Return self//value.\n",
+      " |  \n",
+      " |  __format__(self, format_spec, /)\n",
+      " |      Default object formatter.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getnewargs__(self, /)\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __index__(self, /)\n",
+      " |      Return self converted to an integer, if self is suitable for use as an index into a list.\n",
+      " |  \n",
+      " |  __int__(self, /)\n",
+      " |      int(self)\n",
+      " |  \n",
+      " |  __invert__(self, /)\n",
+      " |      ~self\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __lshift__(self, value, /)\n",
+      " |      Return self<<value.\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mod__(self, value, /)\n",
+      " |      Return self%value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __neg__(self, /)\n",
+      " |      -self\n",
+      " |  \n",
+      " |  __pos__(self, /)\n",
+      " |      +self\n",
+      " |  \n",
+      " |  __pow__(self, value, mod=None, /)\n",
+      " |      Return pow(self, value, mod).\n",
+      " |  \n",
+      " |  __radd__(self, value, /)\n",
+      " |      Return value+self.\n",
+      " |  \n",
+      " |  __rdivmod__(self, value, /)\n",
+      " |      Return divmod(value, self).\n",
+      " |  \n",
+      " |  __rfloordiv__(self, value, /)\n",
+      " |      Return value//self.\n",
+      " |  \n",
+      " |  __rlshift__(self, value, /)\n",
+      " |      Return value<<self.\n",
+      " |  \n",
+      " |  __rmod__(self, value, /)\n",
+      " |      Return value%self.\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  __round__(...)\n",
+      " |      Rounding an Integral returns itself.\n",
+      " |      \n",
+      " |      Rounding with an ndigits argument also returns an integer.\n",
+      " |  \n",
+      " |  __rpow__(self, value, mod=None, /)\n",
+      " |      Return pow(value, self, mod).\n",
+      " |  \n",
+      " |  __rrshift__(self, value, /)\n",
+      " |      Return value>>self.\n",
+      " |  \n",
+      " |  __rshift__(self, value, /)\n",
+      " |      Return self>>value.\n",
+      " |  \n",
+      " |  __rsub__(self, value, /)\n",
+      " |      Return value-self.\n",
+      " |  \n",
+      " |  __rtruediv__(self, value, /)\n",
+      " |      Return value/self.\n",
+      " |  \n",
+      " |  __sizeof__(self, /)\n",
+      " |      Returns size in memory, in bytes.\n",
+      " |  \n",
+      " |  __sub__(self, value, /)\n",
+      " |      Return self-value.\n",
+      " |  \n",
+      " |  __truediv__(self, value, /)\n",
+      " |      Return self/value.\n",
+      " |  \n",
+      " |  __trunc__(...)\n",
+      " |      Truncating an Integral returns itself.\n",
+      " |  \n",
+      " |  as_integer_ratio(self, /)\n",
+      " |      Return integer ratio.\n",
+      " |      \n",
+      " |      Return a pair of integers, whose ratio is exactly equal to the original int\n",
+      " |      and with a positive denominator.\n",
+      " |      \n",
+      " |      >>> (10).as_integer_ratio()\n",
+      " |      (10, 1)\n",
+      " |      >>> (-10).as_integer_ratio()\n",
+      " |      (-10, 1)\n",
+      " |      >>> (0).as_integer_ratio()\n",
+      " |      (0, 1)\n",
+      " |  \n",
+      " |  bit_count(self, /)\n",
+      " |      Number of ones in the binary representation of the absolute value of self.\n",
+      " |      \n",
+      " |      Also known as the population count.\n",
+      " |      \n",
+      " |      >>> bin(13)\n",
+      " |      '0b1101'\n",
+      " |      >>> (13).bit_count()\n",
+      " |      3\n",
+      " |  \n",
+      " |  bit_length(self, /)\n",
+      " |      Number of bits necessary to represent self in binary.\n",
+      " |      \n",
+      " |      >>> bin(37)\n",
+      " |      '0b100101'\n",
+      " |      >>> (37).bit_length()\n",
+      " |      6\n",
+      " |  \n",
+      " |  conjugate(...)\n",
+      " |      Returns self, the complex conjugate of any int.\n",
+      " |  \n",
+      " |  to_bytes(self, /, length=1, byteorder='big', *, signed=False)\n",
+      " |      Return an array of bytes representing an integer.\n",
+      " |      \n",
+      " |      length\n",
+      " |        Length of bytes object to use.  An OverflowError is raised if the\n",
+      " |        integer is not representable with the given number of bytes.  Default\n",
+      " |        is length 1.\n",
+      " |      byteorder\n",
+      " |        The byte order used to represent the integer.  If byteorder is 'big',\n",
+      " |        the most significant byte is at the beginning of the byte array.  If\n",
+      " |        byteorder is 'little', the most significant byte is at the end of the\n",
+      " |        byte array.  To request the native byte order of the host system, use\n",
+      " |        `sys.byteorder' as the byte order value.  Default is to use 'big'.\n",
+      " |      signed\n",
+      " |        Determines whether two's complement is used to represent the integer.\n",
+      " |        If signed is False and a negative integer is given, an OverflowError\n",
+      " |        is raised.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods inherited from int:\n",
+      " |  \n",
+      " |  from_bytes(bytes, byteorder='big', *, signed=False)\n",
+      " |      Return the integer represented by the given array of bytes.\n",
+      " |      \n",
+      " |      bytes\n",
+      " |        Holds the array of bytes to convert.  The argument must either\n",
+      " |        support the buffer protocol or be an iterable object producing bytes.\n",
+      " |        Bytes and bytearray are examples of built-in objects that support the\n",
+      " |        buffer protocol.\n",
+      " |      byteorder\n",
+      " |        The byte order used to represent the integer.  If byteorder is 'big',\n",
+      " |        the most significant byte is at the beginning of the byte array.  If\n",
+      " |        byteorder is 'little', the most significant byte is at the end of the\n",
+      " |        byte array.  To request the native byte order of the host system, use\n",
+      " |        `sys.byteorder' as the byte order value.  Default is to use 'big'.\n",
+      " |      signed\n",
+      " |        Indicates whether two's complement is used to represent the integer.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from int:\n",
+      " |  \n",
+      " |  denominator\n",
+      " |      the denominator of a rational number in lowest terms\n",
+      " |  \n",
+      " |  imag\n",
+      " |      the imaginary part of a complex number\n",
+      " |  \n",
+      " |  numerator\n",
+      " |      the numerator of a rational number in lowest terms\n",
+      " |  \n",
+      " |  real\n",
+      " |      the real part of a complex number\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BOOL\n",
+    "\n",
+    "help(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9a0c2dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid = bool()\n",
+    "is_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f81b7d1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "Non-zero\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Empty\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bool(0))\n",
+    "\n",
+    "num = 10\n",
+    "\n",
+    "# if num:\n",
+    "if bool(num):\n",
+    "    print(\"Non-zero\")\n",
+    "else:\n",
+    "    print(\"Zero\")\n",
+    "\n",
+    "print(bool(0.0))\n",
+    "print(bool(\"\"))\n",
+    "print(bool(\"Test\"))\n",
+    "print(bool([]))\n",
+    "\n",
+    "print(bool(0.025))\n",
+    "print(bool(-1))\n",
+    "print(bool([0, 0]))\n",
+    "\n",
+    "lst1 = []\n",
+    "if len(lst1) != 0:\n",
+    "    print(\"Not empty\")\n",
+    "else:\n",
+    "    print(\"Empty\")\n",
+    "\n",
+    "print(bool(True))\n",
+    "print(bool(False))\n",
+    "print(bool('False'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d18aa96c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on NoneType object:\n",
+      "\n",
+      "class NoneType(object)\n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      True if self else False\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# None\n",
+    "help(None)\n",
+    "# help(object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1a9f850f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = None\n",
+    "bool(a)  # a.__bool__()\n",
+    "\n",
+    "a is None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4fb6dabe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Integers (int)\n",
+    "# Size of an integer -- Arbitrary (Not fixed; depends on the system rsources available to the the process)\n",
+    "\n",
+    "from math import factorial as fact\n",
+    "fact(5)\n",
+    "fact(20)\n",
+    "fact(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ba65c359",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.5, 2)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5/2, 5//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8d68b543",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 81)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Integer and Decimal\n",
+    "# Integer and Binary\n",
+    "a = 10\n",
+    "bin(a), hex(a), int(0xa), oct(a)\n",
+    "\n",
+    "val = \"10000\"\n",
+    "int(val), int(val, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "849025b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00327"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Floats\n",
+    "num  = 3.27e-3\n",
+    "num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e8eebcb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.616e-35"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Plank's Constant\n",
+    "p_const = 1.616e-35\n",
+    "p_const"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "da17f755",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300000.0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3e5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8ae635f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.float_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3525dfe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9007199254740992"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**53"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4f92dde5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.0, 1.618, nan, inf, -inf, True)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(7), float(\"1.618\"), float(\"nan\"), float(\"inf\"), float(\"-inf\"), -12567 > float(\"-inf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "e5ab0e8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "1887811946928\n",
+      "1887802847184\n",
+      "140713788601416\n",
+      "140713788601416\n",
+      "140713788601416\n",
+      "140713788601448\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = 6.0 + 2\n",
+    "print(type(val))\n",
+    "print(id(val))\n",
+    "\n",
+    "data = 8.0\n",
+    "print(id(data))\n",
+    "\n",
+    "#----------------------------\n",
+    "\n",
+    "\n",
+    "i1 = 8+2\n",
+    "i2 = 10\n",
+    "print(id(i1))\n",
+    "print(id(i2))\n",
+    "\n",
+    "i2 += 1\n",
+    "print(id(i1))\n",
+    "print(id(i2))\n"
+   ]
   }
  ],
  "metadata": {
