--- a/001_Start.ipynb
+++ b/001_Start.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "e5ab0e8f",
    "metadata": {},
    "outputs": [
@@ -841,12 +841,14 @@
      "output_type": "stream",
      "text": [
       "<class 'float'>\n",
-      "1887811946928\n",
-      "1887802847184\n",
+      "1887812220848\n",
+      "1887812222576\n",
       "140713788601416\n",
       "140713788601416\n",
       "140713788601416\n",
-      "140713788601448\n"
+      "140713788601448\n",
+      "140713788605032 123\n",
+      "140713788605352 133\n"
      ]
     }
    ],
@@ -868,7 +870,415 @@
     "\n",
     "i2 += 1\n",
     "print(id(i1))\n",
-    "print(id(i2))\n"
+    "print(id(i2))\n",
+    "\n",
+    "num = 123\n",
+    "print(id(num), num)\n",
+    "num += 10\n",
+    "print(id(num), num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "24bf2bea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "9007199254740992.0\n",
+      "9007199254740992.0\n",
+      "9007199254740994.0\n",
+      "9007199254740996.0\n",
+      "9007199254740996.0\n",
+      "9007199254740996.0\n",
+      "9007199254740998.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = float(2**53)\n",
+    "print(type(num))\n",
+    "\n",
+    "print(float(2**53))\n",
+    "print(float(2**53 + 1))\n",
+    "print(float(2**53 + 2))\n",
+    "print(float(2**53 + 3))\n",
+    "print(float(2**53 + 4))\n",
+    "print(float(2**53 + 5))\n",
+    "print(float(2**53 + 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a67d2ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected\n",
+      "0.10000000000000009\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = 0.8 - 0.7\n",
+    "\n",
+    "if val == 0.1:\n",
+    "    print(\"Expected\")\n",
+    "else:\n",
+    "    print(\"Unexpected\")\n",
+    "\n",
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "7b6a355d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected\n",
+      "<class 'decimal.Decimal'> 0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Decimal Type\n",
+    "\n",
+    "from decimal import Decimal\n",
+    "\n",
+    "val = Decimal('0.8') - Decimal('0.7')\n",
+    "\n",
+    "if val == Decimal('0.1'):\n",
+    "    print(\"Expected\")\n",
+    "else:\n",
+    "    print(\"Unexpected\")\n",
+    "\n",
+    "print(type(val), val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "c3dcecc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'> 1.0\n",
+      "True\n",
+      "True\n",
+      "<class 'float'> 1.0\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isOdd1(num):\n",
+    "    return num%2 == 1\n",
+    "\n",
+    "def isOdd2(num):\n",
+    "    return num%2 != 0\n",
+    "\n",
+    "fl = float(\"-3\")\n",
+    "remaining = fl%2\n",
+    "print(type(remaining), remaining)\n",
+    "\n",
+    "print(isOdd1(fl))\n",
+    "print(isOdd2(fl))\n",
+    "\n",
+    "from decimal import Decimal\n",
+    "\n",
+    "dc = float(\"-3\")\n",
+    "remaining = dc%2\n",
+    "print(type(remaining), remaining)\n",
+    "\n",
+    "print(isOdd1(dc))\n",
+    "print(isOdd2(dc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d065e0e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context(prec=100, rounding=ROUND_HALF_EVEN, Emin=-999999, Emax=999999, capitals=1, clamp=0, flags=[Inexact, FloatOperation, Rounded], traps=[InvalidOperation, DivisionByZero, Overflow])\n",
+      "100\n",
+      "ROUND_HALF_EVEN\n",
+      "3.142857142857142857142857143\n",
+      "3.142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "import decimal\n",
+    "from decimal import Decimal\n",
+    "\n",
+    "print(decimal.getcontext())\n",
+    "print(decimal.getcontext().prec)\n",
+    "print(decimal.getcontext().rounding)\n",
+    "\n",
+    "decimal.getcontext().prec = 28\n",
+    "pi = Decimal('22')/Decimal('7')\n",
+    "print(pi)\n",
+    "decimal.getcontext().prec = 100\n",
+    "pi = Decimal('22')/Decimal('7')\n",
+    "print(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "f26dcf23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "import decimal\n",
+    "from decimal import Decimal\n",
+    "decimal.getcontext().prec = 6\n",
+    "num = 1 * Decimal('1.123446')\n",
+    "print(num)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e9acaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "-6\n",
+      "-5\n",
+      "5\n",
+      "-5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Reference points are inf & -inf\n",
+    "print(math.floor(5.2))\n",
+    "print(math.ceil(5.2))\n",
+    "\n",
+    "print(math.floor(-5.2))\n",
+    "print(math.ceil(-5.2))\n",
+    "\n",
+    "# REference point is 0\n",
+    "print(math.trunc(5.2))      # math.floor() equivalent\n",
+    "print(math.trunc(-5.2))     # math.ceil() equivalent\n",
+    "\n",
+    "\n",
+    "\n",
+    "# import decimal\n",
+    "\n",
+    "# decimal.ROU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "f8372f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, -5, 6, -6)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(5.2), round (-5.2), round(5.6), round (-5.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "0c9ca2d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "round(2.675, 2, ROUND_CEILING) --> 2.68\n",
+      "round(2.675, 2, ROUND_FLOOR) --> 2.67\n",
+      "round(2.675, 2, ROUND_UP) --> 2.68\n",
+      "round(2.675, 2, ROUND_DOWN) --> 2.67\n",
+      "round(2.675, 2, ROUND_HALF_DOWN) --> 2.67\n",
+      "round(2.675, 2, ROUND_HALF_EVEN) --> 2.68\n",
+      "round(2.675, 2, ROUND_HALF_UP) --> 2.68\n",
+      "round(2.675, 2, ROUND_05UP) --> 2.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "import decimal\n",
+    "\n",
+    "def round_it(x, ndigits, strategy=decimal.ROUND_HALF_UP):\n",
+    "    decimal.getcontext().rounding = strategy\n",
+    "\n",
+    "    # rounded = round(x, ndigits)\n",
+    "    \n",
+    "    dec_val = decimal.Decimal(str(x))\n",
+    "    rounded = dec_val.quantize(decimal.Decimal(f'1e-{ndigits}'))\n",
+    "    \n",
+    "    print(f\"round({x}, {ndigits}, {strategy}) --> {rounded}\")\n",
+    "\n",
+    "\n",
+    "x =  decimal.Decimal('2.675')\n",
+    "\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_CEILING)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_FLOOR)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_UP)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_DOWN)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_HALF_DOWN)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_HALF_EVEN)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_HALF_UP)\n",
+    "round_it(x, ndigits=2, strategy=decimal.ROUND_05UP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "89bbdae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.142857142857143\n",
+      "44.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "PI = float(22/7)\n",
+    "rad = 7\n",
+    "perimeter = 2 * PI * rad\n",
+    "perimeter = 2 * 3.142857142857143 * 7\n",
+    "\n",
+    "print(PI)\n",
+    "print(perimeter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "1a31cab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Fraction(1837, 25000)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fractions import Fraction\n",
+    "\n",
+    "two_third = Fraction(2, 3)\n",
+    "print(two_third)\n",
+    "\n",
+    "\n",
+    "Fraction('0.1')\n",
+    "\n",
+    "\n",
+    "Fraction('0.07348')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "020ded65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n",
+      "<class 'complex'> (2+3j)\n",
+      "2.0 3.0\n",
+      "(2-3j)\n",
+      "(13+0j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Complex Number\n",
+    "\n",
+    "num  = 5 + 3j\n",
+    "print(type(num))\n",
+    "\n",
+    "num = -1\n",
+    "import cmath\n",
+    "cmath.sqrt(num)\n",
+    "\n",
+    "num = 1j\n",
+    "num ** 2\n",
+    "\n",
+    "\n",
+    "num  = complex(2, 3)\n",
+    "print(type(num), num)\n",
+    "\n",
+    "print(num.real, num.imag)\n",
+    "\n",
+    "\n",
+    "print(num.conjugate())\n",
+    "\n",
+    "print(num * num.conjugate())"
    ]
   }
  ],
