--- a/001_Start.ipynb
+++ b/001_Start.ipynb
@@ -1280,6 +1280,44 @@
     "\n",
     "print(num * num.conjugate())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "5b322b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Test\n",
+      "1887812933232 1887812943728\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"Test\"\n",
+    "b = \"Te\"\n",
+    "c = \"st\"\n",
+    "d = b + c\n",
+    "\n",
+    "print(a, d)\n",
+    "print(id(a), id(d))\n",
+    "\n",
+    "a == d\n",
+    "id(a) == id(d)"
+   ]
   }
  ],
  "metadata": {
